# AutoRAG

./: Dockerfile  README.md  docker-compose-noGPU.yml  docker-compose.yml  pyproject.toml  start.sh
src/AutoRAG/: api.py  bot.py  config.py
